<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:cardBackgroundColor="#FFFFFF"
        app:cardForegroundColor="@android:color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_meetingroom_title"
                style="@style/MeetingRoomTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="대회의실1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_question"
                app:layout_constraintBottom_toBottomOf="@id/tv_meetingroom_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_meetingroom_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_meetingroom_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorNormalText"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_meetingroom_title"
                app:layout_constraintTop_toBottomOf="@id/tv_meetingroom_title"
                tools:text="MUSINSA 1 / B1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#aaaaaa"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_meetingroom_location"
                app:layout_constraintTop_toBottomOf="@id/tv_meetingroom_location"
                tools:text="현재시간" />

            <View
                android:id="@+id/view_current_indicator"
                android:layout_width="1dp"
                android:layout_height="10dp"
                android:background="#cccccc"
                app:layout_constraintStart_toStartOf="@id/tv_current_time"
                app:layout_constraintTop_toBottomOf="@id/tv_current_time" />

            <View
                android:id="@+id/view_time_bar"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorVariableSelect"
                app:layout_constraintStart_toStartOf="@id/tv_meetingroom_location"
                app:layout_constraintTop_toBottomOf="@id/view_current_indicator" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_time_nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/time_bar_nine"
                android:textColor="#aaaaaa"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/view_time_bar"
                app:layout_constraintTop_toBottomOf="@id/view_time_bar"
                tools:text="9" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_time_ten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:text="@string/time_bar_ten"
                android:textColor="#aaaaaa"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_time_nine"
                app:layout_constraintTop_toBottomOf="@id/view_time_bar"
                tools:text="10" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_time_eleven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:text="@string/time_bar_eleven"
                android:textColor="#aaaaaa"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_time_ten"
                app:layout_constraintTop_toBottomOf="@id/view_time_bar"
                tools:text="11" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_time_twelve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:text="@string/time_bar_twelve"
                android:textColor="#aaaaaa"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_time_eleven"
                app:layout_constraintTop_toBottomOf="@id/view_time_bar"
                tools:text="12" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_time_thirteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:text="@string/time_bar_thirteen"
                android:textColor="#aaaaaa"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_time_twelve"
                app:layout_constraintTop_toBottomOf="@id/view_time_bar"
                tools:text="13" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_time_fourteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:text="@string/time_bar_fourteen"
                android:textColor="#aaaaaa"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_time_thirteen"
                app:layout_constraintTop_toBottomOf="@id/view_time_bar"
                tools:text="14" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_time_fifteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:text="@string/time_bar_fifteen"
                android:textColor="#aaaaaa"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_time_fourteen"
                app:layout_constraintTop_toBottomOf="@id/view_time_bar"
                tools:text="15" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_time_sixteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:text="@string/time_bar_sixteen"
                android:textColor="#aaaaaa"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_time_fifteen"
                app:layout_constraintTop_toBottomOf="@id/view_time_bar"
                tools:text="16" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_time_seventeen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:text="@string/time_bar_seventeen"
                android:textColor="#aaaaaa"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_time_sixteen"
                app:layout_constraintTop_toBottomOf="@id/view_time_bar"
                tools:text="17" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_time_eighteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:text="@string/time_bar_eighteen"
                android:textColor="#aaaaaa"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/view_time_bar"
                app:layout_constraintTop_toBottomOf="@id/view_time_bar"
                tools:text="18" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>